--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ html {
   text-align: center; }
   .home h1:after {
     content: attr(title);
+    font-size: 0.25em;
     position: absolute; }
 #hero {
     text-align:center;
