--- a/css/feather.css
+++ b/css/feather.css
@@ -15,7 +15,6 @@
 - Links
 - Buttons
 - Lists
-- Code
 - Utilities
 - Misc
 - Clearing
@@ -143,7 +142,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Varela Round", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222;
+  color: white;
 }
 
 
@@ -445,26 +444,6 @@ li {
   margin-bottom: 1rem;
 }
 
-
-/*------------------------------------------------------------
-  Code
-------------------------------------------------------------*/
-
-code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
-  font-size: 90%;
-  white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px;
-}
-
-pre > code {
-  display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre;
-}
 
 
 /*------------------------------------------------------------
