--- a/css/feather.css
+++ b/css/feather.css
@@ -13,7 +13,7 @@
 - Base Styles
 - Typography
 - Links
-- Buttons
+- Buttons/Components
 - Lists
 - Utilities
 - Misc
@@ -240,7 +240,7 @@ a:hover {
 
 
 /*------------------------------------------------------------
-  Buttons
+  Buttons/Components
 ------------------------------------------------------------*/
 
 .btn {
@@ -412,7 +412,73 @@ a:hover {
   background: rgba(61, 201, 179, 0.6);
   color: #fff;
 }
-
+/* Checkboxes */
+ +input[type="checkbox"] {
+ +  position: absolute;
+ +  left: -99999em;
+ +}
+ +input[type="checkbox"] + .checkbox-label {
+ +  position: relative;
+ +  margin-right: 0.5em;
+ +  -webkit-user-select: none;
+ +     -moz-user-select: none;
+ +      -ms-user-select: none;
+ +          user-select: none;
+ +  cursor: pointer;
+ +  padding-left: 1.5em;
+ +}
+ +input[type="checkbox"] + .checkbox-label:before {
+ +  content: '';
+ +  position: absolute;
+ +  left: 0;
+ +  top: 0;
+ +  display: inline-block;
+ +  line-height: 0;
+ +  width: 1em;
+ +  height: 1em;
+ +  border-radius: 0;
+ +  border-top: 0.1rem solid #F6FCF0;
+ +  border-left: 0.1rem solid #F6FCF0;
+ +  background: transparent;
+ +}
+ +input[type="checkbox"] + .checkbox-label:after {
+ +  content: '';
+ +  position: absolute;
+ +  left: 0;
+ +  top: 0;
+ +  display: inline-block;
+ +  margin-right: 0.5em;
+ +  line-height: 0;
+ +  width: 1em;
+ +  height: 1em;
+ +  border-radius: 0;
+ +  -webkit-transition-property: all;
+ +  transition-property: all;
+ +  -webkit-transition-duration: 150ms;
+ +          transition-duration: 150ms;
+ +  -webkit-transition-timing-function: cubic-bezier(0, 0.67, 0.67, 1);
+ +          transition-timing-function: cubic-bezier(0, 0.67, 0.67, 1);
+ +  border-bottom: 0.1rem solid #F6FCF0;
+ +  border-right: 0.1rem solid #F6FCF0;
+ +  background: none;
+ +}
+ +input[type="checkbox"][disabled] + .checkbox-label {
+ +  opacity: 0.5;
+ +  cursor: default;
+ +}
+ +input[type="checkbox"][disabled] + .checkbox-label:after {
+ +  content: normal;
+ +  display: none;
+ +}
+ +input[type="checkbox"]:checked + .checkbox-label:after {
+ +  -webkit-transition-duration: 250ms;
+ +          transition-duration: 250ms;
+ +  -webkit-transition-timing-function: cubic-bezier(0.46, 1.01, 0.5, 1.98);
+ +          transition-timing-function: cubic-bezier(0.46, 1.01, 0.5, 1.98);
+ +  border-width: 0 0.2rem 0.1rem 0;
+ +  -webkit-transform: rotate(50deg) skew(20deg, 0) scale(0.5, 1.5) translate3d(0.25em, -0.25em, 0);
+ +          transform: rotate(50deg) skew(20deg, 0) scale(0.5, 1.5) translate3d(0.25em, -0.25em, 0);
+ +}
 
 /*------------------------------------------------------------
   Lists
