--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   height: 100%;
   width: 100%;
 }
-.opr-page-f {
+.footer {
   height: 115%;
   width: 100%;
 }
