--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ body {
   text-decoration: none;
 }
 .love .fa {
-  color: #E90606;
+  color: #bdc3c7;
   margin: 0 3px;
   font-size: 10px;
   animation: pound 0.35s infinite alternate;
