--- a/css/main.css
+++ b/css/main.css
@@ -246,11 +246,11 @@ body {
   text-align: center;
 }
 .love a {
-  color: #1dd2af;
+  color: #e74c3c;
   text-decoration: none;
 }
 .love .fa {
-  color: #bdc3c7;
+  color: #E90606;
   margin: 0 3px;
   font-size: 10px;
   animation: pound 0.35s infinite alternate;
