--- a/css/feather.css
+++ b/css/feather.css
@@ -271,23 +271,23 @@ a:hover {
 }
 
 
-/* Button 1 */
+/* Button Outline */
 
-.btn-1 {
+.btn-outline {
   border: 3px solid #fff;
   color: #fff;
 }
 
-.btn-1:hover,
-.btn-1:active {
+.btn-outline:hover,
+.btn-outline:active {
   color: #0e83cd;
   background: #fff;
 }
 
 
-/* Button 2 */
+/* Button 3D */
 
-.btn-2 {
+.btn-3d {
   background: #cb4e4e;
   color: #fff;
   box-shadow: 0 6px #ab3c3c;
@@ -296,36 +296,36 @@ a:hover {
   border-radius: 5px;
 }
 
-.btn-2:hover {
+.btn-3d:hover {
   box-shadow: 0 4px #ab3c3c;
   top: 2px;
 }
 
-.btn-2:active {
+.btn-3d:active {
   box-shadow: 0 0 #ab3c3c;
   top: 6px;
 }
 
 
-/* Button 3 */
+/* Button Round */
 
-.btn-3 {
+.btn-round {
   border-radius: 50px;
   border: 3px solid #fff;
   color: #fff;
   overflow: hidden;
 }
 
-.btn-3:active {
+.btn-round:active {
   border-color: #17954c;
   color: #17954c;
 }
 
-.btn-3:hover {
+.btn-round:hover {
   background: #24b662;
 }
 
-.btn-3:before {
+.btn-round:before {
   position: absolute;
   height: 100%;
   font-size: 125%;
@@ -335,40 +335,22 @@ a:hover {
   transition: all 0.3s;
 }
 
-.btn-3:active:before {
+.btn-round:active:before {
   color: #17954c;
 }
 
-.btn-3:before {
+.btn-round:before {
   left: 130%;
   top: 0;
 }
 
-.btn-3:hover:before {
+.btn-round:hover:before {
   left: 80%;
 }
 
+/* Button Gradient */
 
-/* Button 4 */
-
-.btn-4 {
-  color: #fff;
-  background: #226fbe;
-  -webkit-transition: none;
-  transition: none;
-  border: 4px solid #226fbe;
-}
-
-.btn-4:active {
-  top: 2px;
-}
-
-.btn-4:hover {
-  background: transparent;
-  color: #226fbe;
-}
-
-.btn-5 {
+.btn-gradient {
   background: -webkit-linear-gradient(65deg, #1DDD77, #1C6FE3);
   background: linear-gradient(25deg, #1DDD77, #1C6FE3);
   background-size: 200% 200% !important;
@@ -381,33 +363,13 @@ a:hover {
   -webkit-transition: all 200ms linear;
 }
 
-.btn-5:hover {
+.btn-gradient:hover {
   background-size: 110% 110% !important;
   padding: 1.3em 2.1em;
   -webkit-transition: all 200ms linear;
 }
 
-.btn-6 {
-  background: rgba(61, 201, 179, 1);
-  padding: 20px 40px;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  -webkit-box-shadow: 0px 3px 0px 0px #309383;
-  -moz-box-shadow: 0px 3px 0px 0px #309383;
-  box-shadow: 0px 3px 0px 0px #309383;
-  font-weight: bold;
-}
 
-.btn-6:hover,
-.btn-6:focus {
-  background: rgba(61, 201, 179, 0.6);
-  color: #fff;
-}
 /* Checkboxes */
  input[type="checkbox"] {
    position: absolute;
