--- a/css/feather.css
+++ b/css/feather.css
@@ -1,5 +1,5 @@
 /*
-* Feather V0.0.3 Alpha
+* Feather V0.0.4 Alpha
 * Copyright 2016, Kabir Shah
 * http://kingpixil.github.io/Feather/
 * Free to use under the MIT license.
@@ -550,7 +550,13 @@ form {
   color: #CCC;
 }
 
-
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
 /*------------------------------------------------------------
   Misc
 ------------------------------------------------------------*/
