--- a/css/main.css
+++ b/css/main.css
@@ -209,9 +209,23 @@ body {
   transform: translate(-50%, 0) rotate(45deg);
   cursor: pointer;
 }
-.grid {
-    padding: 5vh;
-}
+/* Grid styles */
+.example-grid .column,
+.example-grid .columns {
+  background: #EEE;
+  text-align: center;
+  border-radius: 4px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  height: 30px;
+  line-height: 30px;
+  margin-bottom: .75rem;
+  font-weight: 600;
+  letter-spacing: .1rem; }
+.docs-example .row,
+.docs-example.row,
+.docs-example form {
+  margin-bottom: 0; }
 @media all and (min-width: 768px) {
     .m-nav {
     display: none;
